fixed gap on right of screen when strinking sceen size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,28 +325,26 @@ a {
   }
 
   .sm-screens > nav > ul > li .sub-menu.mega-menu-column-4 {
-    /* max-width: 800px; */
-    width: 70%;
+    max-width: 500px;
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+  }
 
-    /* flex-wrap: wrap; */
-    /* margin: 20px 15px; */
+  .sm-screens > nav > ul > li .sub-menu.mega-menu-column-4 > div {
+    width: 200px;
   }
 
   .sm-screens > nav > ul > li .sub-menu.mega-menu-column-2 {
-    /* max-width: 800px; */
     width: 40%;
     display: flex;
     justify-content: space-between;
-
-    /* flex-wrap: wrap; */
-    /* margin: 20px 15px; */
   }
 
   .sm-screens > nav > ul > li .sub-menu.mega-menu-column-4 > .list-item img {
     margin-top: 0;
-    width: 95%;
+    width: 100%;
   }
 
   .sm-screens
@@ -700,6 +698,7 @@ a {
 }
 
 @media screen and (min-width: 0px) and (max-width: 825px) {
+  /* contact is hidden from top row */
   .sm-screens > .menu-p > ul > li:last-child {
     display: none;
   }
@@ -709,6 +708,17 @@ a {
   #packagesMenu,
   #blogMenu {
     display: none;
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 775px) {
+  .sm-screens > nav > ul > li .sub-menu.mega-menu-column-4 > div {
+    width: 150px;
+  }
+
+  .sm-screens > nav > ul > li .sub-menu.mega-menu-column-4 {
+    max-width: 450px;
+    width: 100%;
   }
 }
 
@@ -728,6 +738,17 @@ a {
   }
 }
 
+@media screen and (min-width: 0px) and (max-width: 725px) {
+  .sm-screens > nav > ul > li .sub-menu.mega-menu-column-4 > div {
+    width: 150px;
+  }
+
+  .sm-screens > nav > ul > li .sub-menu.mega-menu-column-4 {
+    max-width: 400px;
+    width: 100%;
+  }
+}
+
 @media screen and (min-width: 0px) and (max-width: 680px) {
   .sm-screens > .menu-p > ul > li:nth-last-child(3) {
     display: none;
@@ -742,9 +763,18 @@ a {
   #blogMenu {
     display: block;
   }
+
+  .sm-screens > nav > ul > li .sub-menu.mega-menu-column-4 > div {
+    width: 150px;
+  }
+
+  .sm-screens > nav > ul > li .sub-menu.mega-menu-column-4 {
+    max-width: 350px;
+    width: 100%;
+  }
 }
 
-@media screen and (min-width: 0px) and (max-width: 600px) {
+@media screen and (min-width: 0px) and (max-width: 625px) {
   .sm-screens > .menu-p > ul > li:nth-last-child(4) {
     display: none;
   }
